@@ -1,3 +1,7 @@
+2012-09-19  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* lpath.el: Bind mail-encode-mml for old Emacsen.
+
 2012-09-17  Richard Stallman  <rms@gnu.org>
 
 	* message.el (message-in-body-p): Don't set mark or modify buffer.
